--- a/src/main/webapp/css/Login.css
+++ b/src/main/webapp/css/Login.css
@@ -1,14 +1,9 @@
 @charset "ISO-8859-1";
 
-
-@font-face {
-    font-family: 'Sometype Mono', regular;
-    src: url('SometypeMono-Regular.ttf') format('truetype');
-}
-
 body {
     margin: 0;
     background: url(../img/AF_Login.jpg) no-repeat center center fixed;
+    font-family: monospace;
 }
 
 .content {
@@ -31,7 +26,6 @@ body {
     border: solid black 2px;
     box-shadow: 20px 20px 20px rgb(11,11,11); /*Rich Black FOGRA 39*/
     border-radius: 1rem;
-    font-family: 'Sometype Mono', regular;
 }
 
 .block img {
@@ -54,7 +48,6 @@ body {
     width: 90%;
     margin: 15px 5% 25px 5%;
     text-align: center;
-    font-family: 'Sometype Mono', regular;
     font-size: 25px;
     height: 35px;
     color: #1E1E24; /*Raisin Black*/
@@ -88,6 +81,7 @@ input:focus {
     width: 100%;
     text-align: center;
     margin-bottom: 20px;
+    margin-top: 50px;
 }
 
 .components-button input {
@@ -99,7 +93,6 @@ input:focus {
 }
 
 .content h1 {
-    font-family: 'Sometype Mono', regular;
     font-size: 90px;
     font-weight: bold;
     text-align: center;
