--- a/src/main/webapp/css/HomePage.css
+++ b/src/main/webapp/css/HomePage.css
@@ -1,31 +1,55 @@
 @charset "ISO-8859-1";
 
-.body{
+.body {
     margin: 0;
+    font-family: monospace;
 }
+
 .content {
-    position: absolute;
-    width: 100%;
-}
-
-.content-left {
-    float: left;
-}
-.content h1{
     text-align: center;
-    font-size: 70px;
 }
 
-.paragraph {
-    font-size: 30px;
-    text-align: justify;
-    width: 20%;
-    margin-left: 5%;
+.content h1 {
+    font-size: 60px;
+}
+
+.text-block {
+    box-shadow: 15px 15px 30px rgb(71,71,71); /*Rich Black FOGRA 39*/
+    padding: 10px 10px 15px 10px;
+    background-color: #9CC9E8;
+    border-radius: 2rem;
+    text-align: center;
+    float: left;
+    width: 40%;
+    margin: auto 2% auto 2%;
+    font-size: 28px;
+}
+
+.text-block button {
+    padding: 10px 10px 10px 10px;
+    margin-top: 30px;
+    border-radius: 1rem;
+}
+
+.text-block a {
+    text-decoration: none;
+    font-size: 20px;
+    color: #1E1E24; /*Raisin Black*/
+}
+
+.text-block a:hover {
+    font-weight: bold;
 }
 
 .image {
-    width: 70%;
-    margin-right: 5%;
-    float: left;
+    box-shadow: 15px 15px 30px rgb(71,71,71); /*Rich Black FOGRA 39*/
+    float: right;
+    background: url(../img/AF_Home.png) center no-repeat;
+    width: 1007px;
+    height: 727px;
+    margin: 20px 2% 20px 2%;
 }
 
+.wrap {
+    display: flex;
+}
