--- a/src/main/webapp/css/Profilo.css
+++ b/src/main/webapp/css/Profilo.css
@@ -1,50 +1,93 @@
-body {
+body{
     font-family: monospace;
-    margin: 0;
+    margin:0;
 }
 
-h1 {
+h1{
     text-align: center;
     font-size: 50px;
 }
 
+b{
+    font-size: 30px;
+}
+
 .content-all {
-    box-shadow: 15px 15px 30px rgb(71, 71, 71);
+    box-shadow: 15px 15px 15px rgb(71 71 71);
     border-radius: 2rem;
     border-style: groove;
-    height: 450px;
+    height: 300px;
     background-color: #9CC9E8;
-    width: 40%;
+    margin: auto 25%;
 }
 
 .identity ul {
     list-style-type: none;
-    margin-left: -40px;
+    padding: 0;
+    font-size: 25px;
 }
-
 .identity {
     height: 100%;
-    font-size: 35px;
     text-align: center;
+    float: left;
 }
 
 .identity li{
-    margin-bottom: 20px;
+    margin: 20px 0% 25px 15px;
     border-bottom: solid 3px #101D42;
+}
+
+.form-button {
+    float: right;
+    margin: 120px 30px 0px 0px;
+    text-align: center;
 }
 
 .form-button button {
     padding: 15px;
     text-decoration: none;
     margin-bottom: 20px;
-    font-size: 28px;
+    font-size: 18px;
     border-radius: 7rem;
 }
 
 .form-button a:hover {
     font-weight: bold;
 }
-
 .addSkill {
+    margin-top: 100px;
     font-size: 20px;
+    text-align: center;
+}
+
+.addSkill input {
+    border: groove;
+    background-color: #9cc9e8;
+    resize: none;
+    font-size: 18px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+
+.addSkill textarea {
+    border: inset;
+    background-color: #9cc9e8;
+    border-radius: 1rem;
+    margin-bottom: 20px;
+    resize: none;
+    font-size: 20px;
+}
+
+.occupato {
+    background-color: red;
+    font-size: 20px;
+    border-radius: 5rem;
+    color: red;
+}
+
+.disponibile {
+    background-color: green;
+    font-size: 20px;
+    border-radius: 5rem;
+    color: green;
 }
