--- a/src/main/webapp/css/Dipendenti.css
+++ b/src/main/webapp/css/Dipendenti.css
@@ -72,4 +72,16 @@ h1 {
     font-weight: bold;
 }
 
+.dropdown-content {
+    display: none;
+    margin: 10px auto;
+    width: 260px;
+    height: 155px;
+    border: 2px solid #1E1E24;
+}
+
+.dropdown-content a{
+    display: none;
+}
+
 
