--- a/src/main/webapp/css/Common.css
+++ b/src/main/webapp/css/Common.css
@@ -126,3 +126,14 @@ textarea {
     margin-top: 0;
     margin-bottom: 0;
 }
+
+.error {
+    font-size: 60px;
+    font-weight: bold;
+    font-family: monospace;
+    text-align: center;
+    position: absolute;
+    left: 50%;
+    bottom: 50%;
+    transform: translate(-50%, 50%);
+}
