--- a/src/main/webapp/css/HomePage.css
+++ b/src/main/webapp/css/HomePage.css
@@ -29,6 +29,7 @@
     padding: 10px 10px 10px 10px;
     margin-top: 30px;
     border-radius: 1rem;
+    font-family: monospace;
 }
 
 .text-block a {
