--- a/src/main/webapp/css/Common.css
+++ b/src/main/webapp/css/Common.css
@@ -170,7 +170,8 @@ textarea {
 .team-inf, .team-descr, .team-button, .team-dip {
     display: inline-block;
     font-size: 23px;
-    width: 24%;
+    width: 25%;
+    margin-top: 20px;
 }
 
 .team {
@@ -221,4 +222,32 @@ textarea {
 
 input, button {
     color: #1E1E24;
+}
+input[type=file]::file-selector-button {
+    border: 2px solid #1E1E24;
+    padding: .5em 1em;
+    border-radius: .5em;
+    background-color: #9CC9E8;
+    transition: 1s ease;
+}
+
+input[type=file]::file-selector-button:hover {
+    background-color: #59A5D8;
+}
+
+input[type=submit] {
+    border: 2px solid #1E1E24;
+    padding: .5em 1em;
+    border-radius: .5em;
+    background-color: #9CC9E8;
+}
+
+input[type=submit]:hover {
+    background-color: #59A5D8;
+    transition: 1s ease;
+}
+
+.par{
+    border-bottom: solid #101D42 2px;
+    margin: auto;
 }
