Fixed styling in all HomeRoles.jsp

--- a/src/main/webapp/css/HomePage.css
+++ b/src/main/webapp/css/HomePage.css
@@ -79,7 +79,8 @@
     height: 500px;
     position: absolute;
     left: 50%;
-    transform: translate(-50%, 50%);
+    top: 50%;
+    transform: translate(-50%, -50%);
     background-color: rgba(126, 171, 202, 0.7); /*Air Superiority Blue*/
     border: 2px solid rgb(11, 11, 11);
     box-shadow: 20px 20px 20px rgb(11, 11, 11); /*Rich Black FOGRA 39*/
