--- a/src/main/webapp/css/Common.css
+++ b/src/main/webapp/css/Common.css
@@ -169,7 +169,7 @@ textarea {
     text-align: center;
     padding: 30px 10px 10px 10px;
     margin-bottom: 20px;
-    width: 80%;
+    width: 90%;
 }
 
 .team-inf, .team-descr, .team-button, .team-dip {
@@ -215,13 +215,14 @@ textarea {
     position: relative;
     width: 300px;
     bottom: 55px;
-    right: -15px;
     z-index: 1;
     padding-top: -10px;
     background-color: #59A5D8;
     border: 2px solid black;
     border-radius: 2rem;
     font-family: monospace;
+    margin: auto;
+    padding-bottom: 10px;
 }
 
 .colloquio input {
@@ -255,22 +256,23 @@ input[type=file]::file-selector-button {
     border-radius: .5em;
     background-color: #9CC9E8;
     transition: 1s ease;
+    margin-bottom: 20px;
 }
 
 input[type=file]::file-selector-button:hover {
     background-color: #59A5D8;
 }
 
-.text-block input[type=button], .team-button input[type=button] {
+.content-upload input[type=button], .team-button input[type=button] {
     border: 2px solid #1E1E24;
     padding: .5em 1em;
     border-radius: .5em;
     background-color: #9CC9E8;
     font-family: monospace;
-    font-size: 18px;
+    font-size: 15px;
 }
 
-.text-block input[type=button]:hover, .team-button input[type=button]:hover  {
+.content-upload input[type=button]:hover, .team-button input[type=button]:hover  {
     background-color: #59A5D8;
     transition: 1s ease;
 }
@@ -281,18 +283,22 @@ input[type=file]::file-selector-button:hover {
 }
 
 .content-upload {
-    width: 70%;
-    margin: 80px 15% 80px 15%;
+    display: flex;
+    width: 60%;
+    margin: auto;
+    align-items: center;
 }
 
 .text-block {
-    float: left;
-    width: 70%;
+    display: inline-block;
+    width: 50%;
     text-align: center;
-    font-size: 25px;
-    margin: auto 10% auto auto;
+    font-size: 26px;
 }
 
 .content-upload form {
-    font-size: 30px;
+    margin: auto;
+    display: inline-block;
+    font-size: 28px;
+    width: 50%;
 }
