--- a/src/main/webapp/css/Common.css
+++ b/src/main/webapp/css/Common.css
@@ -85,7 +85,7 @@ textarea {
 
 #home {
     width: 48%;
-    margin-right: 20px;
+    margin: auto 1%;
 }
 
 .content-createTeam {
@@ -183,6 +183,13 @@ textarea {
     display: inline-block;
     font-size: 23px;
     width: 25%;
+}
+
+#flex-team-dip a, #flex-team-dip img {
+    width: 27px;
+    height: 27px;
+    position: relative;
+    top: 2px;
 }
 
 .team {
@@ -337,3 +344,91 @@ input[type=file]::file-selector-button:hover {
     padding: 20px 45px;
 }
 
+.content-profile {
+    display: inline-block;
+    box-shadow: 15px 15px 15px rgb(71 71 71);
+    border-radius: 2rem;
+    border-style: groove;
+    height: 300px;
+    background-color: #9CC9E8;
+    margin-left: 5%; margin-right: 5%;
+}
+
+.identity ul {
+    list-style-type: none;
+    padding: 0;
+    font-size: 25px;
+}
+.identity {
+    height: 100%;
+    text-align: center;
+    float: left;
+}
+
+.identity li{
+    margin: 20px 0% 25px 15px;
+    border-bottom: solid 3px #101D42;
+}
+
+.form-button {
+    float: right;
+    margin: 15px 15px auto 10px;
+    text-align: center;
+}
+
+.form-button button {
+    padding: 15px;
+    text-decoration: none;
+    margin-bottom: 20px;
+    font-size: 18px;
+    font-family: monospace;
+    border-radius: 7rem;
+}
+
+.form-button a:hover {
+    font-weight: bold;
+}
+.addSkill {
+    margin-top: 100px;
+    font-size: 20px;
+    text-align: center;
+}
+
+.addSkill input {
+    border: groove;
+    background-color: #9cc9e8;
+    font-size: 18px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    padding: 6px;
+}
+
+.addSkill textarea {
+    border: inset;
+    background-color: #9cc9e8;
+    border-radius: 1rem;
+    margin-bottom: 20px;
+    resize: none;
+    font-size: 20px;
+}
+
+#quantity, #skillName {
+    width: 230px;
+}
+
+.addSkill input::placeholder, .addSkill textarea::placeholder {
+    text-align: center;
+}
+
+.listSkill {
+    text-align: center;
+    display: inline-block;
+    box-shadow: 15px 15px 15px rgb(71 71 71);
+    border-radius: 2rem;
+    border-style: groove;
+    padding: 10px;
+    background-color: #9CC9E8;
+    vertical-align: top;
+    width: 10%;
+    margin-left: 5%; margin-right: 5%; margin-bottom: auto;
+}
