Deleted SpecificaCompetenze.jsp and VisualizzaCompetenze.jsp. Fixed view skills in VisualizzaDipendenti.jsp and ListaDipendenti.jsp. Added function in Formazione.js. Styled Common.css. Changed fuction's name in Profilo.jsp. Changed a control from if to when in HomeCandidato.jsp.

--- a/src/main/webapp/css/Common.css
+++ b/src/main/webapp/css/Common.css
@@ -128,6 +128,7 @@ textarea {
     padding: 6px;
     background-color: #59A5D8;
     font-family: monospace;
+    margin-bottom: 20px;
 }
 
 #flex-head {
