--- a/src/main/webapp/css/Common.css
+++ b/src/main/webapp/css/Common.css
@@ -10,7 +10,7 @@ h1 {
 }
 
 .content {
-    box-shadow: 15px 15px 30px rgb(71,71,71);
+    box-shadow: 15px 15px 30px rgb(71, 71, 71);
     border-radius: 1rem;
     border-style: groove;
     background-color: #9CC9E8;
@@ -71,7 +71,7 @@ textarea {
 
 .home {
     width: 60%;
-    margin: auto 20% ;
+    margin: auto 20%;
 }
 
 #materiale {
@@ -103,7 +103,7 @@ textarea {
     margin: auto;
 }
 
-.content hr{
+.content hr {
     background-color: #101d42;
     border: solid 2px #101d42;
 }
@@ -122,7 +122,7 @@ textarea {
     display: inline-block;
 }
 
-#flex input, #flex button{
+#flex input, #flex button {
     font-size: 18px;
     border-radius: 2rem;
     padding: 6px;
@@ -152,7 +152,7 @@ textarea {
     height: 128px;
 }
 
-p{
+p {
     font-size: 20px;
     margin-top: 0;
     margin-bottom: 0;
@@ -180,9 +180,10 @@ p{
     width: 90%;
 }
 
-h2{
+h2 {
     font-size: 25px;
 }
+
 .team-inf, .team-descr, .team-button, .team-dip {
     display: inline-block;
     font-size: 23px;
@@ -201,7 +202,7 @@ h2{
     align-items: center;
 }
 
-#flex-team-button button, input[type=submit]{
+#flex-team-button button, input[type=submit] {
     font-size: 18px;
     border-radius: 2rem;
     padding: 6px;
@@ -272,12 +273,12 @@ input[type=file]::file-selector-button:hover {
     font-size: 15px;
 }
 
-.content-upload input[type=button]:hover, .team-button input[type=button]:hover  {
+.content-upload input[type=button]:hover, .team-button input[type=button]:hover {
     background-color: #59A5D8;
     transition: 1s ease;
 }
 
-.team-button p, .skills{
+.team-button p, .skills {
     border-bottom: solid #101D42 2px;
     margin: auto;
 }
@@ -339,6 +340,7 @@ input[type=file]::file-selector-button:hover {
     width: 90%;
     margin: auto;
 }
+
 .information table {
     text-align: center;
 }
@@ -355,7 +357,8 @@ input[type=file]::file-selector-button:hover {
     border-style: groove;
     height: 300px;
     background-color: #9CC9E8;
-    margin-left: 5%; margin-right: 5%;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
 .identity ul {
@@ -363,13 +366,14 @@ input[type=file]::file-selector-button:hover {
     padding: 0;
     font-size: 25px;
 }
+
 .identity {
     height: 100%;
     text-align: center;
     float: left;
 }
 
-.identity li{
+.identity li {
     margin: 20px 0% 25px 15px;
     border-bottom: solid 3px #101D42;
 }
@@ -392,6 +396,7 @@ input[type=file]::file-selector-button:hover {
 .form-button a:hover {
     font-weight: bold;
 }
+
 .addSkill {
     margin-top: 100px;
     font-size: 20px;
@@ -434,5 +439,11 @@ input[type=file]::file-selector-button:hover {
     background-color: #9CC9E8;
     vertical-align: top;
     width: 10%;
-    margin-left: 5%; margin-right: 5%; margin-bottom: auto;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: auto;
+}
+
+.stato {
+    margin-bottom: 20px;
 }
