Added style in Common.css. Removed a comment in HomeCandidato.jsp. Added candidate's list in ListaColloqui.java. Changed dispatcher in HomeHR.jsp. Fixed all page in ListaColloqui.jsp.

--- a/src/main/webapp/css/Common.css
+++ b/src/main/webapp/css/Common.css
@@ -93,7 +93,7 @@ textarea {
     margin: auto 15%;
 }
 
-.content-candidati {
+.content-candidati, .content-colloqui{
     width: 90%;
     margin: auto 5%;
 }
