--- a/src/main/webapp/css/Common.css
+++ b/src/main/webapp/css/Common.css
@@ -1,3 +1,4 @@
+/*OVUNQUE*/
 body {
     margin: 0;
     font-family: monospace;
@@ -9,6 +10,56 @@ h1 {
     color: #1E1E24; /*Raisin Black*/
 }
 
+h2 {
+    font-size: 25px;
+}
+
+p {
+    font-size: 20px;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+a {
+    text-decoration: none;
+    color: #1E1E24;
+}
+
+textarea {
+    font-size: 25px;
+    color: #383A43; /*Onyx*/
+}
+
+input:hover, button:hover, a:hover {
+    font-weight: bold;
+}
+
+input:focus {
+    outline: none;
+}
+
+input::placeholder {
+    color: #383A43; /*Onyx*/
+}
+
+input, button {
+    color: #1E1E24;
+}
+
+input[type=file]::file-selector-button {
+    border: 2px solid #1E1E24;
+    padding: .5em 1em;
+    border-radius: .5em;
+    background-color: #9CC9E8;
+    transition: 1s ease;
+    margin-bottom: 20px;
+}
+
+input[type=file]::file-selector-button:hover {
+    background-color: #59A5D8;
+}
+
+/*TUTTI I CLASS*/
 .content {
     box-shadow: 15px 15px 30px rgb(71, 71, 71);
     border-radius: 1rem;
@@ -23,15 +74,6 @@ h1 {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-}
-
-a {
-    text-decoration: none;
-    color: #1E1E24;
-}
-
-input:hover, button:hover, a:hover {
-    font-weight: bold;
 }
 
 .form textarea {
@@ -55,46 +97,32 @@ input:hover, button:hover, a:hover {
     color: #1E1E24; /*Raisin Black*/
 }
 
-input:focus {
-    outline: none;
+.form textarea::placeholder {
+    text-align: center;
 }
 
-input::placeholder {
-    color: #383A43; /*Onyx*/
+.form-button {
+    float: right;
+    margin: 15px 15px auto 10px;
+    text-align: center;
 }
 
-textarea {
-    font-size: 25px;
-    color: #383A43; /*Onyx*/
+.form-button button {
+    padding: 15px;
+    text-decoration: none;
+    margin-bottom: 20px;
+    font-size: 18px;
+    font-family: monospace;
+    border-radius: 7rem;
 }
 
-.home {
-    width: 60%;
-    margin: auto 20%;
-}
-
-#materiale {
-    color: #1E1E24; /*Raisin Black*/
-    cursor: pointer;
-}
-
-#cerca {
-    width: 100px;
-}
-
-#home {
-    width: 48%;
-    margin: auto;
+.form-button a:hover {
+    font-weight: bold;
 }
 
 .content-createTeam {
     width: 70%;
     margin: auto 15%;
-}
-
-.content-candidati, .content-colloqui {
-    width: 90%;
-    margin: auto 5%;
 }
 
 .content-competenze {
@@ -107,34 +135,9 @@ textarea {
     border: solid 2px #101d42;
 }
 
-#flex {
-    width: 24%;
+.dropdown {
     display: inline-block;
-    text-align: center;
-    font-size: 25px;
-    padding-top: 10px;
-    word-wrap: break-word;
-    margin-bottom: 10px;
-}
-
-#flex form {
-    display: inline-block;
-}
-
-#flex input, #flex button {
-    font-size: 18px;
-    border-radius: 2rem;
-    padding: 6px;
-    background-color: #59A5D8;
-    font-family: monospace;
-    margin-bottom: auto;
-}
-
-#flex-head {
-    width: 24%;
-    display: inline-block;
-    font-size: 30px;
-    font-weight: bold;
+    padding: 10px;
 }
 
 .dropdown-content {
@@ -149,12 +152,6 @@ textarea {
     display: inline-block;
     width: 128px;
     height: 128px;
-}
-
-p {
-    font-size: 20px;
-    margin-top: 0;
-    margin-bottom: 0;
 }
 
 .error {
@@ -175,12 +172,10 @@ p {
     background-color: #9CC9E8;
     text-align: center;
     padding: 30px 10px 10px 10px;
-    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
     width: 90%;
-}
-
-h2 {
-    font-size: 25px;
+    margin: 0px 5% 20px 5%;
 }
 
 .team-inf, .team-descr, .team-button, .team-dip {
@@ -189,25 +184,9 @@ h2 {
     width: 25%;
 }
 
-#flex-team-dip a, #flex-team-dip img {
-    width: 27px;
-    height: 27px;
-    position: relative;
-    top: 2px;
-}
-
-.team {
-    display: flex;
-    align-items: center;
-}
-
-#flex-team-button button, input[type=submit] {
-    font-size: 18px;
-    border-radius: 2rem;
-    padding: 10px;
-    background-color: #59A5D8;
-    font-family: monospace;
-    margin-bottom: 20px;
+.team-button p, .skills {
+    border-bottom: solid #101D42 2px;
+    margin: auto;
 }
 
 .colloquio {
@@ -241,28 +220,6 @@ h2 {
     border-bottom: 2px solid #1E1E24;
 }
 
-input, button {
-    color: #1E1E24;
-}
-
-.dropdown {
-    display: inline-block;
-    padding: 10px;
-}
-
-input[type=file]::file-selector-button {
-    border: 2px solid #1E1E24;
-    padding: .5em 1em;
-    border-radius: .5em;
-    background-color: #9CC9E8;
-    transition: 1s ease;
-    margin-bottom: 20px;
-}
-
-input[type=file]::file-selector-button:hover {
-    background-color: #59A5D8;
-}
-
 .content-upload input[type=button], .team-button input[type=button] {
     border: 2px solid #1E1E24;
     padding: .5em 1em;
@@ -277,23 +234,11 @@ input[type=file]::file-selector-button:hover {
     transition: 1s ease;
 }
 
-.team-button p, .skills {
-    border-bottom: solid #101D42 2px;
-    margin: auto;
-}
-
 .content-upload {
     display: flex;
     width: 60%;
     margin: auto;
     align-items: center;
-}
-
-.text-block {
-    display: inline-block;
-    width: 50%;
-    text-align: center;
-    font-size: 26px;
 }
 
 .content-upload form {
@@ -303,18 +248,11 @@ input[type=file]::file-selector-button:hover {
     width: 50%;
 }
 
-#teamDescr, #specCompetenze {
-    border: inset;
-    background-color: white;
-    border-radius: 1rem;
-    margin-bottom: 20px;
-    resize: none;
-    font-size: 20px;
-    margin-top: 10px;
-}
-
-.form textarea::placeholder {
+.text-block {
+    display: inline-block;
+    width: 50%;
     text-align: center;
+    font-size: 26px;
 }
 
 .occupato {
@@ -335,18 +273,33 @@ input[type=file]::file-selector-button:hover {
     color: green;
 }
 
-.information {
+.lista {
     width: 90%;
     margin: auto;
 }
 
-.information table {
+.lista table {
     text-align: center;
 }
 
-.information th {
+.lista th {
     font-size: 30px;
     padding: 20px 45px;
+}
+
+.listSkill {
+    text-align: center;
+    display: inline-block;
+    box-shadow: 15px 15px 15px rgb(71 71 71);
+    border-radius: 2rem;
+    border-style: groove;
+    padding: 10px;
+    background-color: #9CC9E8;
+    vertical-align: top;
+    width: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: auto;
 }
 
 .content-profile {
@@ -377,25 +330,6 @@ input[type=file]::file-selector-button:hover {
     border-bottom: solid 3px #101D42;
 }
 
-.form-button {
-    float: right;
-    margin: 15px 15px auto 10px;
-    text-align: center;
-}
-
-.form-button button {
-    padding: 15px;
-    text-decoration: none;
-    margin-bottom: 20px;
-    font-size: 18px;
-    font-family: monospace;
-    border-radius: 7rem;
-}
-
-.form-button a:hover {
-    font-weight: bold;
-}
-
 .addSkill {
     margin-top: 100px;
     font-size: 20px;
@@ -420,29 +354,85 @@ input[type=file]::file-selector-button:hover {
     font-size: 20px;
 }
 
-#quantity, #skillName {
-    width: 230px;
-}
-
 .addSkill input::placeholder, .addSkill textarea::placeholder {
     text-align: center;
 }
 
-.listSkill {
-    text-align: center;
+.stato {
+    margin-bottom: 20px;
+}
+
+/*TUTTI GLI ID*/
+#materiale {
+    color: #1E1E24; /*Raisin Black*/
+    cursor: pointer;
+}
+
+#cerca {
+    width: 100px;
+}
+
+#home {
+    width: 48%;
+    margin: auto 1%;
+}
+
+#flex {
+    width: 24%;
     display: inline-block;
-    box-shadow: 15px 15px 15px rgb(71 71 71);
+    text-align: center;
+    font-size: 25px;
+    padding-top: 10px;
+    word-wrap: break-word;
+    margin-bottom: 10px;
+}
+
+#flex form {
+    display: inline-block;
+}
+
+#flex input, #flex button {
+    font-size: 18px;
     border-radius: 2rem;
-    border-style: groove;
-    padding: 10px;
-    background-color: #9CC9E8;
-    vertical-align: top;
-    width: 10%;
-    margin-left: 5%;
-    margin-right: 5%;
+    padding: 6px;
+    background-color: #59A5D8;
+    font-family: monospace;
     margin-bottom: auto;
 }
 
-.stato {
+#flex-head {
+    width: 24%;
+    display: inline-block;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+#flex-team-dip a, #flex-team-dip img {
+    width: 27px;
+    height: 27px;
+    position: relative;
+    top: 2px;
+}
+
+#flex-team-button button, input[type=submit] {
+    font-size: 18px;
+    border-radius: 2rem;
+    padding: 10px;
+    background-color: #59A5D8;
+    font-family: monospace;
     margin-bottom: 20px;
+}
+
+#teamDescr, #specCompetenze {
+    border: inset;
+    background-color: white;
+    border-radius: 1rem;
+    margin-bottom: 20px;
+    resize: none;
+    font-size: 20px;
+    margin-top: 10px;
+}
+
+#quantity, #skillName {
+    width: 230px;
 }
