--- a/src/main/webapp/css/Common.css
+++ b/src/main/webapp/css/Common.css
@@ -77,8 +77,9 @@ input[type=file]::file-selector-button:hover {
 }
 
 .form textarea {
+    width: 70%;
+    height: 200px;
     padding: 5px;
-    resize: none;
 }
 
 .form input {
@@ -274,17 +275,10 @@ input[type=file]::file-selector-button:hover {
 }
 
 .lista {
-    width: 90%;
-    margin: auto;
-}
-
-.lista table {
-    text-align: center;
-}
-
-.lista th {
-    font-size: 30px;
-    padding: 20px 45px;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
 .listSkill {
